# toolset

./: .gitignore  CREDITS.md  LICENSE  README.md  install_dependencies.cmd  toolbox_git_log.csv  toolset.pro
cpp-projects/: ts-dependencies.pri  ts-gen-var.pri  ts-projects.pri  ts-settings.pri  ts-thirdparty.pri
cpp-projects/3d-engine/: 3d-engine.pro
cpp-projects/_resources/: resources.qrc
cpp-projects/base/: base.pro  base_main.cpp
cpp-projects/base-app/: LICENSE  base-app.pro  base_main.cpp  test_ak_device.cpp  test_ak_device.hpp  test_bdf.cpp  test_dc_player.cpp  test_dc_settings.cpp  test_encoding.cpp  test_frames_processing.hpp  test_k2_device.cpp  test_k2_device.hpp  test_k4_device.hpp  test_kvid.cpp  test_mic.cpp  test_multi_devices.cpp  test_ob_device.cpp  test_ob_device.hpp  test_ob_utility.hpp  test_pcl.cpp  test_simd.cpp  test_time.cpp  test_udp_server.hpp  test_volumetric_video_player.hpp  tests.hpp
cpp-projects/base-export/: base-export.pro  dc_client_export.cpp  dc_client_export.hpp  dc_network_direct_player_export.cpp  dc_network_direct_player_export.hpp  dc_video_player_export.cpp  dc_video_player_export.hpp  dc_video_recorder_export.cpp  dc_video_recorder_export.hpp
cpp-projects/base-export-app/: base-export-app.pro  base_export_app_main.cpp
cpp-projects/base-test/: LICENSE  base-test.pro  camera_tests.cpp  cloud_tests.cpp  exp_tests.cpp  geometry_tests.cpp  glm_utility.hpp  main.cpp
cpp-projects/camera/: camera.pro
cpp-projects/cmake/base/: CMakeLists.txt
cpp-projects/cmake/base/build_msvc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cpp-projects/cmake/base/build_msvc/.cmake/api/v1/reply/: cmakeFiles-v1-0ac6f821419dd522ab16.json  codemodel-v2-858a85b0c442832c90d6.json  directory-.-Release-664e8c0e06d228901d9b.json  index-2025-03-13T13-17-58-0746.json  target-base-Release-56fdd808c662d3853187.json
cpp-projects/cmake/base/build_msvc/.cmake/api/v1/reply.prev/: cache-v2-34654c2e361279c25cd0.json  codemodel-v2-a855b21b13fe7426dfa9.json  directory-.-Release-540ccb639b66c2a4ef98.json  index-2025-03-13T13-16-01-0422.json  target-base-Release-bf4a10619a296adc598d.json
cpp-projects/cmake/base/geometry/: _aabb2.hpp  _geometry3.hpp  _ray3.hpp  _rectangle.hpp  aabb3.hpp  color_voxel_grid.cpp  color_voxel_grid.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  obb3.hpp  plane3.hpp  point.hpp  point3.hpp  vertices.cpp  voxel.hpp
cpp-projects/cmake/base/network/: network_enums.hpp  network_types.cpp  network_types.hpp  tcp_reader.cpp  tcp_reader.hpp  tcp_sender.hpp  tcp_server.cpp  udp_sender.cpp
cpp-projects/cmake/base/network/settings/: remote_server_settings.hpp  udp_connection_settings.cpp  udp_connection_settings.hpp  udp_server_settings.hpp
cpp-projects/cmake/base/utility/: algorithm.hpp  array.hpp  base_logger.cpp  base_logger.hpp  benchmark.hpp  cmd_args.hpp  constants.hpp  decimal.hpp  geometry_formatter.hpp  io_data.hpp  io_file.cpp  io_fstream.hpp  logger.cpp  logger.hpp  math.hpp  paths.cpp  safe_queue.hpp  string_geo.hpp  string_unordered_map.hpp  thread.hpp  time.hpp  time_diff.cpp  time_diff.hpp  types.hpp  unordered_map.hpp
cpp-projects/dc-grabber/: dc-grabber.pro  dcg_controller.cpp  dcg_controller.hpp  dcg_main.cpp  dcg_model.cpp  dcg_model.hpp  dcg_signals.cpp  dcg_signals.hpp  dcg_view.cpp  dcg_view.hpp
cpp-projects/dc-manager/: CREDITS.md  LICENSE  dc-manager.pro  dcm_controller.cpp  dcm_controller.hpp  dcm_main.cpp  dcm_model.cpp  dcm_model.hpp  dcm_signals.cpp  dcm_signals.hpp  dcm_view.cpp  dcm_view.hpp
cpp-projects/dc-monitoring/: dc-monitoring.pro  dcmo_main.cpp  vwutils.cpp
cpp-projects/dc-player/: dc-player.pro  dcp_controller.cpp  dcp_controller.hpp  dcp_main.cpp  dcp_model.cpp  dcp_model.hpp  dcp_signals.cpp  dcp_signals.hpp  dcp_view.cpp  dcp_view.hpp
cpp-projects/demos/: LICENSE  demos.pro  demos_main.cpp  resources.cpp
cpp-projects/depth-camera/: dc_calibrator.cpp  dc_calibrator.hpp  dc_compressed_frame.cpp  dc_compressed_frame.hpp  dc_compressed_frames.hpp  dc_device.cpp  dc_device_impl.hpp  dc_device_manager.cpp  dc_enums.hpp  dc_frame.cpp  dc_frame.hpp  dc_frame_compressor.hpp  dc_frame_data.cpp  dc_frame_data.hpp  dc_frame_indices.hpp  dc_grabber_data_processing.cpp  dc_grabber_data_processing.hpp  dc_player.cpp  dc_player.hpp  dc_recorder.cpp  dc_recorder.hpp  dc_server_data.cpp  dc_server_data.hpp  depth-camera.pro
cpp-projects/guardian/: LICENSE  guardian.pro  guardian_main.cpp
cpp-projects/imgui-opengl-engine/: LICENSE  imgui-opengl-engine.pro
cpp-projects/k4-monitoring/: k4-monitoring.pro  k4m_main.cpp  vwutils.h
cpp-projects/k4-scaner-grabber/: k4-scaner-grabber.pro  k4sg_controller.cpp  k4sg_controller.hpp  k4sg_gl_window.cpp  k4sg_gl_window.hpp  k4sg_main.cpp  k4sg_model.cpp  k4sg_model.hpp  k4sg_signals.cpp  k4sg_signals.hpp
cpp-projects/k4-scaner-manager/: k4-scaner-manager.pro  k4sm_controller.cpp  k4sm_controller.hpp  k4sm_gl_window.cpp  k4sm_gl_window.hpp  k4sm_main.cpp  k4sm_model.cpp  k4sm_model.hpp  k4sm_signals.cpp  k4sm_signals.hpp
cpp-projects/nodes/: nodes.pro
cpp-projects/opengl-utility/: LICENSE  opengl-utility.pro
cpp-projects/opengl-utility-app/: opengl-utility-app.pro  opengl_utility_main.cpp
cpp-projects/qt-utility-app/: JKQtPlotterTest.cpp  JKQtPlotterTest.hpp  lines_counter.hpp  qt-utility-app.pro  (+1 more)
(+1990 files in other folders)
